--- a/css/html5reset.css
+++ b/css/html5reset.css
@@ -6,6 +6,10 @@ Author: Richard Clark - http://richclarkdesign.com
 Twitter: @rich_clark
 */
 
+img {
+    image-orientation: from-image;
+}
+
 html, body, div, span, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 abbr, address, cite, code,
@@ -100,3 +104,4 @@ hr {
 input, select {
     vertical-align:middle;
 }
+
